# GAMES101-Homework

./: README.md
Homework1/Assignment1/: CMakeLists.txt  main.cpp
Homework2/Assignment2/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework3/Assignment3/: CMakeLists.txt  Shader.hpp  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Homework4/Assignment4/: CMakeLists.txt  main.cpp
Homework5/Assignment5/: Renderer.cpp  Triangle.hpp
Homework6/Assignment6/: Renderer.cpp  Triangle.hpp
